--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "razorpay": "^2.9.6",
     "start": "^5.1.0",
     "zod": "^3.22.4"
   },
